src/test/resources/tests/47_spawn_outside_multi.expected
Runtime error: Runtime Error at line 6:0: thread can only be used inside multi blocks
