src/test/resources/tests/47_spawn_outside_multi.tee
// Test: thread outside multi block is a runtime error
function worker() do
    return 42
end

thread r: worker()
